--- a/example/.babelrc
+++ b/example/.babelrc
@@ -1,12 +1,5 @@
 {
   "presets": [
-    "react-native-stage-0/decorator-support"
-  ],
-  "env": {
-    "development": {
-      "plugins": [
-        "transform-react-jsx-source"
-      ]
-    }
-  }
+    "exponent"
+  ]
 }
