--- a/example/package.json
+++ b/example/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "tabviewexample",
+  "name": "react-navigation-addons-demo",
   "version": "0.0.1",
   "private": true,
-  "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start"
-  },
+  "main": "main.js",
   "dependencies": {
-    "@exponent/vector-icons": "^4.0.0",
     "exponent": "~13.1.1-rc.1",
     "react": "~15.4.2",
     "react-native": "git+https://github.com/exponentjs/react-native.git#sdk-13.0.0",
     "react-navigation": "^1.0.0-beta.5",
     "react-navigation-addons": "file:../"
   },
-  "main": "main.js"
+  "devDependencies": {
+    "babel-preset-exponent": "^1.0.0"
+  }
 }
