--- a/package.json
+++ b/package.json
@@ -10,16 +10,24 @@
     "lint": "eslint ."
   },
   "devDependencies": {
-    "babel-eslint": "^7.1.1",
-    "eslint": "^3.16.1",
-    "eslint-plugin-babel": "^4.0.1",
-    "eslint-plugin-flowtype": "^2.30.0",
+    "babel-eslint": "^7.2.2",
+    "eslint": "^3.19.0",
+    "eslint-config-prettier": "^1.7.0",
+    "eslint-plugin-babel": "^4.1.1",
+    "eslint-plugin-flowtype": "^2.32.1",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-react": "^6.10.0",
-    "eslint-plugin-react-native": "^2.2.1",
-    "flow-bin": "^0.37.0",
-    "react": "^15.4.2",
-    "react-native": "^0.41.2",
-    "react-navigation": "^1.0.0-beta.5"
+    "eslint-plugin-prettier": "^2.0.1",
+    "eslint-plugin-react": "^6.10.3",
+    "eslint-plugin-react-native": "^2.3.2",
+    "flow-bin": "^0.40.0",
+    "prettier": "^1.2.2",
+    "react": "^15.5.4",
+    "react-native": "^0.43.4",
+    "react-navigation": "^1.0.0-beta.8"
+  },
+  "dependencies": {
+    "hoist-non-react-statics": "^1.2.0",
+    "lodash": "^4.17.4",
+    "shallowequal": "^0.2.2"
   }
 }
