--- a/example/package.json
+++ b/example/package.json
@@ -5,12 +5,14 @@
   "main": "main.js",
   "dependencies": {
     "expo": "~16.0.0",
+    "hoist-non-react-statics": "^1.2.0",
     "react": "16.0.0-alpha.6",
     "react-native": "git+https://github.com/expo/react-native.git#sdk-16.0.0",
     "react-navigation": "^1.0.0-beta.8",
-    "react-navigation-addons": "file:../"
+    "shallowequal": "^0.2.2"
   },
   "devDependencies": {
+    "babel-plugin-module-resolver": "^2.7.0",
     "babel-preset-expo": "^1.0.0"
   }
 }
