--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   },
   "dependencies": {
     "eslint-import-resolver-babel-module": "^3.0.0",
-    "hoist-non-react-statics": "^1.2.0",
-    "shallowequal": "^0.2.2"
+    "events": "^1.1.1",
+    "hoist-non-react-statics": "^2.3.1",
+    "shallowequal": "^1.0.2"
   }
 }
